--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ h3, h1, p, section, main, footer {
     }
 
 body {
-    max-width: 980px;
+    max-width: 100%;
     margin: auto;
 }
 header{
@@ -26,7 +26,7 @@ header nav .logo {
 .cards {
     display: flex;
     justify-content: space-around;
-    max-width: 980px;
+    max-width: 100%;
     flex-flow: row;
     margin: 25px;
 }
