--- a/css/index.css
+++ b/css/index.css
@@ -20,8 +20,9 @@ header nav .logo {
     text-align: center;
     text-decoration: none;
     color: var(--main-color);
-    
+
 }
+
 
 .cards {
     display: flex;
@@ -40,8 +41,6 @@ header nav .logo {
     text-align: center;
     font-family: 'Sigmar One', cursive;
 }
-
-
 
 
 header nav .menu {
@@ -194,9 +193,10 @@ main h3 {
 }
 
 footer {
+    display: grid;
+    grid-template-rows: 50px 50px 50px;
     text-align: center;
-    height: 300px;
-    width: 100%;
+    max-width: 100%;
     font-family: 'Sigmar One', cursive;
     padding: 60px;
     list-style-type: none;
