--- a/css/index.css
+++ b/css/index.css
@@ -5,191 +5,41 @@ h3, h1, p, section, main, footer {
     padding: 0;
     }
 
-body {
-    max-width: 100%;
-    margin: auto;
-}
-header{
-    background-color: #1E90FF;
-}
-
-header nav .logo {
-    font-family: 'Sigmar One', cursive;
-    font-size: 2rem;
-    text-transform: uppercase;
-    text-align: center;
-    text-decoration: none;
-    color: var(--main-color);
-
-}
-
-
-.cards {
-    display: flex;
-    justify-content: space-around;
-    max-width: 100%;
-    flex-flow: row;
-    margin: 25px;
-}
-
-.price {
-    text-align: center;
-    font-family: 'Sigmar One', cursive;
-}
-
-.product-title {
-    text-align: center;
-    font-family: 'Sigmar One', cursive;
-}
-
-
-header nav .menu {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    padding: 0;
-    list-style-type: none;
-    justify-content: space-around;
-}
-
-header nav .menu a {
-    font-family: 'Sigmar One', cursive;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--main-color);
-    border: 1px solid transparent;
-    padding: 5px;
-} 
-
-header nav .menu a:hover{
-    border: 1px solid black;
-
-}
-
-main section .product-card {
-    display: block;
-    align-items: center;
-    border: 1px solid transparent;
-    justify-content: space-around;
-}
-
-main section .price {
-    font-family: 'Sigmar One', cursive;
-}
-
-
-
-@media (min-width: 800px) {
-    header nav {
-        display: flex;
-    }
-}
-main .border {
-    width: 300px;
-    margin: 20px;
-    background: white;
-    padding: 20px;
-    border: 1px solid #F1E7E8;
-}
-.product-wrap img {
-  display: block;
-  width: 100%;
-}
-
-/* 
-{box-sizing: border-box;}
-.border {
-  width: 300px;
-  margin: 20px;
-  background: white;
-  padding: 20px;
-  border: 1px solid #F1E7E8;
-}
-.wrap {
-  height: 50%;
-  position: relative;
+ a{
+     color: #000;
+     text-decoration: none;
  }
-.product-wrap {position: relative;}
-.product-wrap:after {
-  content: '';
-  background: rgba(73, 102, 162, .5);
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  opacity: 0;
-  transform: scale(.3);
-  transition: .3s ease-in-out;
-}
-.border:hover .product-wrap:after {
-  opacity: 1;
-  transform: scale(1);
-}
-.product-wrap a {
-  display: block;
-  text-decoration: none;
-}
-.product-wrap img {
-  display: block;
-  width: 100%;
-}
-.loop-action {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  opacity: 0;
-  transform: translate(-50%, -50%);
-  transition: .3s ease-in-out;
-}
-.border:hover .loop-action {opacity: 1;}
-.loop-action a {
-  text-decoration: none;
-  display: block;
-  border: 1px solid white;
-  white-space: nowrap;
-  text-transform: uppercase;
-  padding: .5em 1em;
-  font-size: 14px;
-  line-height: 1.6;
-  outline: none;
-  position: relative;
-  overflow: hidden;
-  text-align: center;
-  color: white;
-  min-width: 160px;
-  margin: 5px auto;
-  transition: .3s ease-in-out;
-}
-.loop-action a:after {
-  content: '';
-  position: absolute;
-  left: -220%;
-  top: -500%;
-  width: 140%;
-  height: 1000%;
-  transform: rotate(45deg);
-  background: white;
-  z-index: -1;
-  transition: .3s ease-in-out;
-}
-.loop-action a:hover {color: black;}
-.loop-action a:hover:after {left: 0%;}
-.border:hover {border-color: #4966A2;}
-.product-info {padding-top: 15px;}
+ .header{
+     display: flex;
+     justify-content: space-between;;
+     padding: 10px;
+     background: #689CD2;
+     color: #000;
+     font-family: 'Sigmar One', cursive;
+ }
+ .header__section{
+     display: flex;
+     align-items: center;
+ }
+.header__item{
+padding: 10px 15px;
+font-size: 20px;
+margin-left: 5px;
 
-.product-title {
-  font-weight: normal;
-  font-family: 'Sigmar One', cursive;
-  color: #162546;
-  font-size: 20px;
 }
-.price {
-  font-family: "Open Sans";
-  color: #162546;
-  font-style: italic;
-  font-weight: bold;
-} */
+.header__item:hover{
+    background-color: #ff9900;
+    border-radius: 4px;
+}
+.header__logo{
+    font-weight: bold;
+}
+.headerButton{
+    cursor: pointer;
+}
+
+
+
 #about {
     text-align: center;
     height: 300px;
