--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,8 @@ h3, h1, p, section, main, footer {
  }
  .header{
      display: flex;
-     justify-content: space-between;;
+     max-width: 100%;
+     justify-content: space-between;
      padding: 10px;
      background: #689CD2;
      color: #000;
