--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet')
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
 h3, h1, p, section, main, footer {
     margin: 0;
@@ -16,7 +16,7 @@ h3, h1, p, section, main, footer {
      padding: 10px;
      background: #689CD2;
      color: #000;
-     font-family: 'Sigmar One', cursive;
+     font-family: 'Josefin Sans', sans-serif;
  }
  .header__section{
      display: flex;
@@ -29,7 +29,7 @@ margin-left: 5px;
 
 }
 .header__item:hover{
-    background-color: #ff9900;
+    background-color: #e6f4f5;
     border-radius: 4px;
 }
 .header__logo{
@@ -38,14 +38,110 @@ margin-left: 5px;
 .headerButton{
     cursor: pointer;
 }
+/* @media (min-width: 980px) {
+  .header {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  } */
 
+main .product-list{
+  margin-block-end: 100px;
+  margin-block-start: 100px;
+}
+
+main .product-card img {
+  width: 100%;
+  display: block;
+
+ }
+main .product-card{
+  border: solid 1px black;
+  margin: 2px;
+    }
+
+main .product-card .button-group {
+  display: flex;
+  justify-content: space-around;
+}
+.item-name {
+  font-family: 'Josefin Sans', sans-serif;
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  text-align: center;
+}
+.price{
+  font-family: 'Josefin Sans', sans-serif;
+  text-align: center;
+  margin-block-start: 2em;
+  margin-block-end: 2em;
+  margin-inline-start: 1px;
+  margin-inline-end: 1px;
+  font-weight: bold;
+}
+
+@media (min-width: 660px) {
+  .product-list {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 5px;
+  }
+}
+
+@media (min-width: 860px) {
+  .product-list {
+      grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 980px) {
+  .product-list {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  
+  
+
+
+.button {
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.1em solid #FFFFFF;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 300;
+  color: #FFFFFF;
+  text-align: center;
+  transition: all 0.3s;
+  background-color: transparent;
+}
+
+.button:hover {
+  color: #000000;
+  background-color: #FFFFFF;
+  cursor: pointer;
+}
+
+.card-button {
+  border-color: black;
+  color: black;
+}
+
+.card-button:hover {
+  background-color: black;
+  color: white;
+}
 
 
 #about {
     text-align: center;
-    height: 300px;
+    height: 500px;
     width: 100%;
-    font-family: 'Sigmar One', cursive;
+    font-family: 'Josefin Sans', sans-serif;
     padding: 60px;
    }
 
@@ -58,7 +154,7 @@ margin-left: 5px;
       padding-top: 25px;
     }
       footer a,p{
-        font-family: 'Sigmar One', cursive;
+        font-family: 'Josefin Sans', sans-serif;
         color: black;
         font-size: 24px;
         margin-left: 10px;
