--- a/css/contact.css
+++ b/css/contact.css
@@ -1,35 +1,66 @@
-/* *,
-*::before,
-*::after{
+/* @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+
+h3, h1, p,  main, footer {
     margin: 0;
     padding: 0;
-    box-sizing: inherit; */
+    font-family: 'Josefin Sans', sans-serif;
 
-    footer a,
-    p {
-      font-family: "Josefin Sans", sans-serif;
+    }
+
+ a{
+     color: #000;
+     text-decoration: none;
+ }
+ .header{
+     display: flex;
+     max-width: 100%;
+     justify-content: space-between;
+     padding: 10px;
+     background: #689CD2;
+     color: #000;
+     font-family: 'Josefin Sans', sans-serif;
+ }
+ .header__section{
+     display: flex;
+     align-items: center;
+ }
+.header__item{
+padding: 10px 15px;
+font-size: 20px;
+margin-left: 5px;
+
+}
+.header__item:hover{
+    background-color: #e6f4f5;
+    border-radius: 4px;
+}
+.header__logo{
+    font-weight: bold;
+}
+.headerButton{
+    cursor: pointer;
+}
+@media (min-width: 980px) {
+  .header {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  } */
+
+  footer{
+    width: 100%;
+    height: auto;
+    background: grey;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 25px;
+  }
+    footer a,p{
+      font-family: 'Josefin Sans', sans-serif;
       color: black;
       font-size: 24px;
       margin-left: 10px;
       text-decoration: none;
-    }
-    footer nav a:hover {
-      border: 1px solid black;
-    }
-    
-    .social img {
-      margin-left: 10px;
-      margin-bottom: 10px;
-    }
-    
-    main .contactus {
-      background-color: coral;
-    }
-
-    main .form-inputs {
-        background-color: darkgoldenrod;
-    }
-
-    main .mailing-list {
-        background-color: yellowgreen;
-    }
+      
+  }
+  footer nav a:hover{
+    border: 1px solid black;
+  }
