--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,10 @@ h3, h1, p,  main, footer {
     font-family: 'Josefin Sans', sans-serif;
 
     }
-
+body {
+  max-width: 980px;
+  margin: auto;
+}
  a{
      color: #000;
      text-decoration: none;
