--- a/css/contact.css
+++ b/css/contact.css
@@ -48,7 +48,7 @@ margin-left: 5px;
   footer{
     width: 100%;
     height: auto;
-    background: grey;
+    background: black;
     margin: 0 auto;
     text-align: center;
     padding-top: 25px;
